# DeepForest

./: .bumpversion.toml  .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yaml  .travis.yml  .zenodo.json  AGENTS.md  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  DeepForest.wpr  DeepForest.wpu  DoubleCounting.py  Evaluation_of_NeonTreeVegetation_data.ipynb  HISTORY.md  HISTORY.rst  LICENSE  LIDAR.ipynb  MANIFEST.in  Makefile  Model_training_on_urban_tree_detection_data.ipynb  README.md  README.rst  RGB_crop.ipynb  Training_of_Deepforest_model_on_OSBS_megaplot_dataset.ipynb  __init__.py  _config.yml  _config_debug.yml  _retrain_config.yml  _retrain_config_debug.yml  azure-pipelines.yml  citation_count.json  cli.py  codecov.yml  (+57 more)
.github/: copilot_instructions.md  pull_request_template.md  tests.instructions.md
.ipynb_checkpoints/: LIDAR-checkpoint.ipynb  RGB_crop-checkpoint.ipynb  dask-checkpoint.err
DataExploration/: DataExploration.Rmd  DataExploration.ipynb  Lidar.Rmd  Lidar.html  functions.R  pairwise_count.R
DeepForest/: .travis.yaml  CropGenerator.py  DeepForest.wpu  Generate.py  Hyperspectral.py  Lidar.py  README.md  README.rst  RGB  RGB.py  RunJob.sh  SubmitKeras.sh  SubmitRVis.sh  callbacks.py  config.py  dask_utils.py  evalmAP.py  evaluate.py  evaluation.py  gdal_polygonize.py  gisexport.py  h5_generator.py  lidar_crop.py  metrics.py  metrics2.py  neon_eval  normalize.py  onthefly_generator.py  pointcloud.py  postprocessing.py  preprocess.py  sampler.py  setup.py  sliding_window.py  src.R  tools.py  tox.ini  utils.py
HPC/: Launch_Dask_SLURM.sh  StartDask  StartDask.py  Start_Jupyter.py  SubmitEvaluation.sh  SubmitLidar.sh  SubmitRVis.sh  __init__.py  eval.sbatch  fullmodel.sbatch  grid.sbatch  retraining.sbatch  sequence.sbatch  set_hpc_env.sh  submit_both.sh  submit_cpu_job.sh  submit_dask.sh  submit_eval.sh  submit_grid.sh  submit_job.sh  submit_predict.sh  submit_profile.sh  submit_retraining.sh  submit_training.sh  testbatch.sh  training.sbatch  voxelnet_setup.sh
OSBS_megaplots/: 2019_OSBS_5_403000_3284000_image.shp  2019_OSBS_5_403000_3284000_image.shx  2019_OSBS_5_403000_3285000_image.shx  2019_OSBS_5_404000_3284000_image.shp  2019_OSBS_5_404000_3284000_image.shx  2019_OSBS_5_404000_3285000_image.shp  2019_OSBS_5_404000_3285000_image.shx
analysis/: Cross_Site.py  crown_area.py  prcurve.py  pretraining_size.csv  retrain_sequence.py  site_grid.csv  site_grid.py  test_h5.py
conda_recipe/: meta.yaml
data/: 2019_YELL_2_528000_4978000_image_crop2.xml  2019_YELL_2_541000_4977000_image_crop.tiff  AcceptedSpecies.csv  OSBS_003.laz  OSBS_006.laz  OSBS_006.tif  OSBS_006_test.tif.aux.xml  OSBS_029.xml  SOAP_061.xml  bounding_boxes.csv  bounding_boxes_NEON_D03_OSBS_DP1_398000_3280000_classified_point_cloud_laz.csv  bounding_boxes_OSBS_003.csv  current_release.csv  deepforest_anchor_config.ini.txt  detection.csv  detection_OSBS_003.csv  detection_OSBS_006.csv  eval_example.csv  evaluation.csv  example.csv  testfile_deepforest.csv
deepforest/: .gitignore  .travis.yml  IoU.py  __init__.py  _version.py  augmentations.py  boxes.py  callbacks.py  convert centroids.py  dataset.py  deepforest.py  download.py  evaluate.py  image.py  main.py  model.py  predict.py  preprocess.py  retinanet_train.py  tfrecord_train.py  tfrecords.py  train_data_generator.py  training.py  transforms.py  utilities.py  visualize.py
docs/: CONTRIBUTING.md  ConfigurationFile.md  CropModel.md  Evaluation.md  Example.md  ExtendingModule.md  FAQ.md  Makefile  Model_Architecture.md  Reading_and_Writing  annotation.md  augmentations.md  better.md  bird_detector.md  case_study_FrenchGuiana.md  code_of_conduct.rst  conf.py  deepforestr.md  developer.rst  example_gist.md  getting_started.md  index.md  index.rst  installation.md  installation.rst  landing.md  make.bat  multi_gpu_validation_fix.md  multi_species.md  multiclass.md  neon_benchmark.md  performance.md  prebuilt.md  requirements.txt  sample.ipynb  scaling.md  training.md  training_config.md  usage.rst  use.md  (+1 more)
gradio_app/: app.py
logs/: events.out.tfevents.1542233123.MacBook-Pro.local  events.out.tfevents.1542233242.MacBook-Pro.local  events.out.tfevents.1542233379.MacBook-Pro.local  events.out.tfevents.1542303988.MacBook-Pro.local  events.out.tfevents.1542307403.MacBook-Pro.local  events.out.tfevents.1542307559.MacBook-Pro.local  events.out.tfevents.1542487391.MacBook-Pro.local  events.out.tfevents.1542487798.MacBook-Pro.local  events.out.tfevents.1542488391.MacBook-Pro.local  events.out.tfevents.1542648582.MacBook-Pro.local  events.out.tfevents.1542650974.MacBook-Pro.local  events.out.tfevents.1542651576.MacBook-Pro.local  events.out.tfevents.1542653080.MacBook-Pro.local  events.out.tfevents.1542654161.MacBook-Pro.local  events.out.tfevents.1542656550.MacBook-Pro.local  events.out.tfevents.1542656813.MacBook-Pro.local  events.out.tfevents.1542657034.MacBook-Pro.local  events.out.tfevents.1542661856.MacBook-Pro.local  events.out.tfevents.1542662251.MacBook-Pro.local  events.out.tfevents.1542662524.MacBook-Pro.local  events.out.tfevents.1542663794.MacBook-Pro.local  events.out.tfevents.1542664959.MacBook-Pro.local  events.out.tfevents.1542666006.MacBook-Pro.local  events.out.tfevents.1542667644.MacBook-Pro.local  events.out.tfevents.1542668316.MacBook-Pro.local  events.out.tfevents.1542669043.MacBook-Pro.local  events.out.tfevents.1542830465.c37a-s24.ufhpc  events.out.tfevents.1542831307.c37a-s24.ufhpc  events.out.tfevents.1542834358.c37a-s24.ufhpc  events.out.tfevents.1542838029.c37a-s24.ufhpc  events.out.tfevents.1543342246.MacBook-Pro.local  events.out.tfevents.1543342703.MacBook-Pro.local  events.out.tfevents.1543343589.MacBook-Pro.local  events.out.tfevents.1543344252.MacBook-Pro.local  events.out.tfevents.1543347527.MacBook-Pro.local  events.out.tfevents.1543351980.MacBook-Pro.local  events.out.tfevents.1543352586.MacBook-Pro.local  events.out.tfevents.1543354864.MacBook-Pro.local  events.out.tfevents.1543355434.MacBook-Pro.local  (+7 more)
model/: CHM.py  (+5 more)
(+808 files in other folders)
